2004-06-22  John Luke <jluke@cfl.rr.com>

	* CSharpBindingCompilerManager.cs: be explicit when copying the
	assembly to avoid silent failures (use build/bin/. not build/bin)

2004-06-17  John Luke  <jluke@cfl.rr.com>

	* Gui/OutputOptionsPanel.cs: Use MonoDevelop.Gui.Widgets.FileSelector
	instead of Gtk.FileSelection

2004-05-30  Lluis Sanchez Gual  <lluis@ximian.com>

	* Parser/Resolver.cs: Resolve base classes using a deep search in all
	  project references. In SearchType, fixed namespace lookup so it works
	  for inner classes as well.

2004-05-27  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: fix up projects with space in
	their name.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: more makefile magic.

2004-05-25  Todd Berman  <tberman@sevenl.net>

	* Parser/Parser.cs: Update MonodocResolver and IsAsResolver.
	* Parser/Resolver.cs: Update MonodocResolver and IsAsResolver

2004-05-25  Lluis Sanchez Gual  <lluis@ximian.com>

	* Parser/Parser.cs: Set the file name to the region of each parsed class.
	  Added IProject parameter in CtrlSpace and Resolve.
	* Parser/Resolver.cs: Added IProject parameter where needed. Use new 
	  methods in IParserService.

2004-05-25  Todd Berman  <tberman@sevenl.net>

	* CSharpLanguageBinding.cs: signature change for GenerateMakefile
	* CSharpBindingCompilerManager.cs: lots of new stuff, make run compat
	stuff, etc, etc

2004-05-22  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: add "s to work around potential
	spaces... spaces... urgh. closes bug #58840

2004-05-18  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: add a warning to the top of the
	makefiles.

2004-05-18  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: change from /option to -option

2004-05-16  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: output a much better makefile.
	now using /pkg, checking for deps, etc.