@@ -20,7 +20,6 @@ using MonoDevelop.Core.AddIns.Codons;
 using MonoDevelop.Services;
 
 using Gtk;
-using MonoDevelop.Gui.Widgets;
 
 namespace CSharpBinding
 {
