@@ -1,3 +1,11 @@
+2004-07-01  Todd Berman  <tberman@off.net>
+
+	* Parser/Resolver.cs: fix up CtrlSpace resolving to add this. members
+	to the completion window. We need to figure out what is causing the
+	public class MyWindow : Window not working but the public class
+	MyWindow : Gtk.Window still works and this stuff will look good.
+	* Gui/OutputOptionsPanel.cs: remove dup'd namespace.
+
 2004-06-22  John Luke <jluke@cfl.rr.com>
 
 	* CSharpBindingCompilerManager.cs: be explicit when copying the
